Lots of work: fixed alignment on index, added open invoiced totals index, is_invoiced field created, change invoiced jobs to green on index, added 'pic' field to job add, possibly more...humanize?

--- a/media/jobs/css/index-main.css
+++ b/media/jobs/css/index-main.css
@@ -7,9 +7,18 @@
 }
 
 .open-invoice {
-  float: right;
-  margin-top: 10px;
-  font-weight: 700;
-  font-size: 1.2em;
-  color: green;
+	float: right;
+	margin-top: 10px;
+	margin-left: 15px;
+	font-weight: 700;
+	font-size: 1.2em;
+}
+
+.invoice-numbers {
+	color: green;
+}
+
+.invoiced {
+	font-weight: 700;
+	color: green;
 }
